bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:12: error: illegal start of simple expression
    return x
    ^